update dashboard user

--- a/FinacialProjectVersion3/Views/Shared/_Layout.cshtml
+++ b/FinacialProjectVersion3/Views/Shared/_Layout.cshtml
@@ -39,13 +39,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Budget" asp-action="Index">
-                                    <i class="fas fa-chart-pie me-1"></i>Ngân sách
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Report" asp-action="Index">
-                                    <i class="fas fa-chart-line me-1"></i>Báo cáo
+                                <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
+                                    <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                                 </a>
                             </li>
                         }
