--- a/FinacialProjectVersion3/Views/Shared/_Layout.cshtml
+++ b/FinacialProjectVersion3/Views/Shared/_Layout.cshtml
@@ -43,6 +43,15 @@
                                     <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                                 </a>
                             </li>
+                            // ==========================ADMIN FUNCTION ==========================
+                            @if (User.IsInRole("admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Admin" asp-action="Users">
+                                        <i class="fas fa-users-cog me-1"></i>Quản lý User
+                                    </a>
+                                </li>
+                            }
                         }
                     </ul>
                     <ul class="navbar-nav">
